--- a/src/content/posts/translations/lands-lords-ladies.mdx
+++ b/src/content/posts/translations/lands-lords-ladies.mdx
@@ -25,12 +25,12 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Это руководство не предназначено для создания сеттинга кампании. Вместо этого — это дополнение общего назначения, которое можно использовать для создания феодального правительства, распространённого в большинстве миров D&D, а также для того, чтобы найти, куда может вписаться группа приключенцев в любой кампании пятой редакции. В следующих разделах мы рассмотрим основную структуру феодального правительства, способы получения титула, а также все права и обязанности, которые с ним связаны. Кроме того, будут рассмотрены детали управления феодом для определения того, сколько золота могут принести земли новому лорду.
 
-#### Расы и полы
+### Расы и полы
 Это руководство в основном посвящено людям и их королевствам, просто потому, что только человеческие королевства имеют историческую перспективу, с которой мы можем работать. Данное руководство было разработано таким образом, чтобы быть совместимым с любой расой, использующей феодальную или клановую систему правления, и может быть адаптировано мастером в соответствии с его собственной интерпретацией различных рас Dungeons & Dragons.
 
 Аналогичным образом, хотя средневековый период не очень хорошо запомнился тем, что способствовал равенству полов, в данном тексте мы исходим из того, что между мужчинами и женщинами нет разницы в возможностях или социальных ожиданиях. Присутствие магии в мире D&D должно препятствовать возникновению любых половых предубеждений, и в этом тексте предполагается, что благородный человек может быть лордом или леди в равной степени.
 
-#### Распространёность магии
+### Распространёность магии
 В этом руководстве предполагается, что большинство людей, живущих в мире кампании, живут в условиях довольно низкого уровня магии. Здесь есть рекомендации по использованию магии богатыми лордами, которые могут позволить себе нанять опытных магов, а также для приключенцев, среди которых есть сильные заклинатели.
 
 В тех поселениях, где есть заклинатели, они, как правило, низкого уровня и ориентированы на мирскую и практичную магию, а не на яркие и мощные проявления, используемые приключенцами. В деревне может жить необученный колдун, способный использовать лишь малую часть силы, которую он так и не смог до конца изучить. В городе может появиться чужеземец, готовый предложить то немногое, чему он научился, в обмен на горячую еду и временный ночлег. Города и деревни, расположенные рядом с храмом, могут получить выгоду от низкоуровневых жрецов, которые сосредоточились на служении, а не на путешествиях, чтобы развить свою могущественную божественную магию.
@@ -56,21 +56,21 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 В этом разделе мы рассмотрим форму феодальной структуры, различные уровни и чины, составляющие сложную иерархию. Это может быть использовано мастером для создания дворянства королевства, а также для понимания игроками своего места в феодальных структурах, к которым они присоединяются. Следует также отметить, что используемые здесь названия различных уровней и чинов — лишь один из примеров очень распространённой структуры, используемой практически в каждом феодальном обществе. Правитель — это правитель, независимо от того, король это, рекс или сёгун.
 
-#### Империя
+### Империя
 Имперский уровень — самый высокий уровень, который может существовать в феодальной иерархии, но не всегда присутствует. Империи образуются, когда несколько отдельных и независимых государств объединяются под властью одного правителя либо с помощью политических манёвров, либо с помощью религиозной принадлежности, либо путём завоеваний. Независимо от способа образования, имперские земли, как правило, очень слабо связаны друг с другом и требуют постоянной работы со стороны императора или императрицы и императорской семьи, единственных членов этого уровня, для поддержания их власти над многочисленными землями.
 
 Империи не имеют определённого размера, они просто настолько велики, насколько велики входящие в них земли. Как правило, чем могущественнее император или императрица, тем больше может стать империя под их властью, но чем больше империя, тем сложнее её поддерживать. Для империй, образовавшихся в ходе завоеваний, довольно часто характерен распад после смерти завоевателя, если только его наследник не докажет, что у него хватит сил и решимости сохранить империю. Империи, сформированные договорами, как правило, балансируют на грани распада, постоянно враждуя между собой, но сохраняя единство при борьбе с внешними угрозами. Религиозные империи, как правило, наиболее стабильны, поскольку их культуры объединены единой верой, но всё же могут расколоться при слабом лидере.
 
 В большинстве империй лидер также является правящим монархом своего родного королевства и получает преимущества от этого положения, как описано в следующем разделе.
 
-#### Королевство
+### Королевство
 Королевство — зачастую самый высший уровень иерархии страны. Этот уровень определяется созданием независимой страны, или королевства, и состоит исключительно из королевской семьи. Как и в случае с имперским уровнем, члены королевской семьи могут иметь титулы, принадлежащие к пэрству или дворянству, но они всё равно считаются членами королевского уровня, и поэтому их титулы, дарованные им, считаются королевскими титулами.
 
 Король или королева — глава королевского уровня, возглавляющий королевство. Зачастую именно ему принадлежит большая часть земель королевства, хотя и не все. Как правило, слабые правители владеют лишь 55-60% земель своего королевства и, чтобы оставаться у власти, полагаются на прочные союзы с дворянами-землевладельцами своего королевства или в значительной степени зависят от прав, дарованных им могущественными структурами. Более сильные правители владеют 80-85 % своей территории и гораздо более уверены в своём правлении.
 
 Размеры королевств варьируются от самых маленьких 8 000 квадратных миль до 165 000 квадратных миль, но большинство из них находятся в диапазоне от 30 000 до 80 000 квадратных миль. Как правило, чем больше ресурсов в регионе, тем меньше королевства, так как больше государств конкурируют за богатые земли. Плотность населения в таких королевствах составляет в среднем 80-100 человек на квадратную милю, а 45-55% общей площади земель пригодны для проживания в виде маноров. В более пустынных регионах есть большие разросшиеся королевства с огромными участками пустых, неосвоенных земель, средняя плотность населения в которых может достигать 20-40 человек на квадратную милю, а маноры есть только на 10-25% их земель.
 
-#### Пэрство
+### Пэрство
 Пэрство - самый населённый уровень в феодальной иерархии, состоящий как минимум из трёх различных чинов; однако можно создать несколько названий для одного и того же чина, разграничивая их разными способами. Например, владыку графства, расположенного вдоль границы страны, можно назвать маркизом, который несёт большую военную ответственность и, следовательно, имеет более высокий социальный ранг, чем обычный лорд. Или можно провести различие между дворянами, владеющими своими землями, и теми, кто получил земли в качестве вассалов. Более того, для различных структур можно даже ввести целый набор титулов. В этом разделе мы остановимся на основных чинах, а полученную информацию можно перенести на дополнительные титулы, если это необходимо.
 
 В отличие от императорского и королевского уровней, семья дворянина не считается представителем этого уровня, пока не получит собственный титул. Однако в зависимости от чина в пэрстве дети дворян нередко имеют собственные титулы, и даже при более низких чинах считается вежливым распространять чин родителей и на детей.
@@ -81,27 +81,27 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 **Барония.** Самым маленьким феодом в дворянстве является барония, управляемая бароном или баронессой. Практически все бароны являются вассалами другого человека, будь то государь, герцог или даже граф. Типичное баронство имеет площадь около 90 квадратных миль и состоит из 11 маноров. Как и в случае с другими феодами, существует большой диапазон размеров — от 15 до 120 квадратных миль и от 2 до 15 маноров.
 
-#### Джентри
+### Джентри
 Джентри — это довольно большая группа людей в феодальной структуре, являющихся земельными вассалами, но не являются членами пэрства. Их принято делить на рыцарей или джентльменов и леди. Все члены джентри владеют, как правило, феоды из 1-2 манора и всегда являются вассалами того, кто предоставил им свои земли.
 
 Рыцари — это обученные воины, которые несут воинскую службу в обмен на свои феоды. Они составляют основу средневековых армий. Когда дворянин отправлялся на войну, он призывал всех своих вассальных рыцарей, которые, в свою очередь, собирали трудоспособных мужчин из своих деревень и шли на помощь своему сеньору.
 
 Джентльмены и леди — представители дворянства, не обученные военному делу. Такие люди обычно встречаются только вдали от пограничных территорий и в старых королевствах. Как правило, они являются важными советниками своих сеньоров и получают вознаграждение в виде собственных земель.
 
-#### Фримены
+### Фримены
 Фримены считаются людьми низкого происхождения, но они не привязаны к земле или феодальной системе. Как и в случае с дворянством, к ним относится целый ряд лиц разного положения. Купцы и торговцы были свободными людьми, которые могли обучаться своему ремеслу. Купцы обычно путешествуют по королевствам и между ними, перевозя различные товары. Торговцы обычно селятся в деревнях вместе с крестьянами и занимаются своим ремеслом с разрешения лорда, или же отправляются в города.
 
 Йомены также являются фрименами, владеющими собственными участками земли, обычно от 15 до 60 акров. Нередко представители дворянства продают или отдают часть своих земель особым йоменам, которые затем помогают им управлять остальным манором, а в случае с рыцарями могут стать надёжными воинами в их боевом отряде. В большинстве королевств существовали требования к йоменам, позволявшие лорду конфисковать их земли, если они не соответствовали этим произвольным требованиям.
 
-#### Крестьяне
+### Крестьяне
 Низший класс общества, крестьяне, или крепостные, привязаны к манору, в котором они работают, и не могут его покинуть. Крепостные получают земли в деревне для строительства дома и земли в маноре для ведения хозяйства, а взамен они обрабатывают фермы лордов, сражаются в их конфликтах и платят налоги. Более богатые крестьяне могли получить 20-40 акров земли для своих семей, в то время как у бедных крестьян могло быть всего 2-5 акров, и им часто приходилось быть батраками, чтобы выжить.
 
-<aside>
+<Aside>
 
-##### Королевство Адар
+### Королевство Адар
 Королевство Адар — довольно скромное королевство, если сравнивать. Его площадь составляет 42 500 квадратных миль, а население - около 2 500 000 человек. Адар разделён на 6 герцогств. Внутри этих герцогств насчитывается около 85 графств и несколько сотен бароний. Всего в королевстве насчитывается около 5 300 маноров, то есть около 31 % территории королевства заселено.
 
-</aside>
+</Aside>
 
 
 
@@ -110,7 +110,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Тогда перед игроками и мастерами встаёт вопрос: как партия может получить земли и титулы? В этом разделе мы рассмотрим различные способы стать дворянином в типичной феодальной системе, которые потенциально доступны для персонажа игрока.
 
-#### Наследство
+### Наследство
 Самый простой и наиболее распространённый способ получения земель и титулов - наследование. В большинстве миров кампании применяется наследственная система, при которой земли и титулы человека переходят к его ближайшим родственникам после его смерти. Игрок, взявший предысторию "Благородный", может вместе с мастером уточнить, какой дворянский чин имеет его семья и где он находится в линии наследования этого титула.
 
 Аналогично, игроки, вступившие в романтические отношения с сыном или дочерью дворянина, могут стать наследниками этих земель через своего благородного супруга. Хотя такой союз обычно не одобряется дворянскими семьями, если приключенец имеет простое происхождение, исключения могут быть сделаны для могущественных приключенцев, независимо от их положения.
@@ -119,25 +119,25 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Нередко при наследовании земель сеньор взимает с наследника пошлину. Уплата пошлины, обычно составляющей полный годовой доход с феода, гарантирует наследнику положение нового вассала и владение феодом, принадлежавшим его родителю.
 
-#### Становление вассалом
+### Становление вассалом
 Наряду с наследованием титула от родителей, наиболее распространённым способом получения титула является становление вассалом другого дворянина. Чаще всего это происходит в относительно молодых королевствах с небольшим количеством дворян. В таких государствах ещё много возможностей для новых вассалов. В старых, более устоявшихся королевствах, создание нового вассала требует создания нового феода, что означает уменьшение собственных земель или отъём земель у другого вассала, что очень сложно сделать.
 
 Восходящие приключенцы - это группа, которой часто удаётся отвоёвывать земли. Когда искатели приключений действуют в пределах королевства, их часто рассматривают как политических соперников, поскольку они совершают подвиги и завоёвывают популярность в массах. Такая угроза власти дворянина может быть превращена в политический инструмент против конкурентов, если приключенцев удастся обратить вассалами. В результате персонажам достаточно высокого уровня часто предлагают земли все дворяне, которые знают их и осведомлены об их подвигах.
 
-#### Заселение незанятых земель
+### Заселение незанятых земель
 Заселение незанятых земель - редкость для большинства, хотя именно таким способом первые короли обретали свою власть. Этот вариант получения власти имеет свои сложности, первая из которых - где найти такие земли. Вблизи обжитого королевства редко можно найти значительные участки незанятой плодородной земли. Если же такая земля всё-таки находится, то обычно она незанята из-за присутствия диких зверей или свирепых монстров. После их устранения соседние лорды часто выдвигают претензии на эти земли, пытаясь подавить нового соперника.
 
 Если земли заняты в относительной близости от уже существующего королевства, они часто будут испытывать давление со стороны этого королевства, чтобы присоединиться и присягнуть на верность короне. Такие соглашения обычно дают лорду, претендующему на землю, соответствующий титул и право владения землями в королевстве в обмен на клятву верности.
 
 В другом случае, если предъявить претензии на земли, далёкие от уже существующего королевства, найти эти земли будет проще, хотя, конечно, придётся применить силу, чтобы закрепиться на них. В таких отдалённых регионах также возникают проблемы с привлечением крестьянского населения.
 
-#### Покупка земель
+### Покупка земель
 Это самый редкий вариант получения земель и титулов. Земля - основная единица достатка и престижа в феодальном обществе. Только самые отчаянные и обездоленные лорды станут продавать принадлежащие им земли. Даже в тех редких случаях, когда земли можно купить, это, как правило, не приводит к получению титула. Подобная схема позволяет игрокам получить земли для строительства своих крепостей, не вступая в социальные отношения с лордом.
 
 ### Быть лордом или леди
 Независимо от используемого метода или присвоенного дворянского чина, как только человек получает титул на собственные земли, он наделяется определёнными правами на них, обязанностями по содержанию и управлению этой территорией, а также обязательствами перед своим сеньором. Исключение составляют лишь те дворяне, которые владеют своими землями и поэтому не имеют своего сеньора.
 
-#### Дворянские права
+### Дворянские права
 Первое право лорда - распоряжаться своим феодом так, как он считает нужным, если это не вредит ни земле, ни чести его сеньора. Это позволяет лорду раздавать части своей земли в качестве феодов
 
 своим собственным вассалам, привлекать йоменов, давая или продавая им небольшие участки земли, или использовать любой другой способ управления. Это также означает, что вассал обязан хранить верность только своему сеньору, но не сеньору своего сеньора.
@@ -146,7 +146,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Дворяне также сохраняют определённые права на земли, которые они передают своим вассалам в качестве феода. В частности, это права на конфискацию, пошлины, опеку и возврат, которые связаны с передачей владения феодом. По праву конфискации дворянин может отменить вассалитет, если считает, что его вассал обесчестил его или нарушил клятву. Право на пошлины даёт дворянину право на получение пошлин при передаче феода и вассалитета наследнику умершего вассала. Согласно праву опеки, дворянин может восстановить свой контроль над феодом в случае появления несовершеннолетнего наследника, пока тот не достигнет совершеннолетия. Наконец, плаво возврата — это право дворянина вернуть свой феод в собственное владение, если вассал умрёт без наследника.
 
-#### Дворянские обязательства
+### Дворянские обязательства
 В церемонии вассалитета, когда сеньор и вассал заключают союз, обе стороны приносят друг другу несколько клятв. Первая клятва гарантирует, что вассал не причинит вреда репутации, землям или личности своего сеньора, а сеньор клянётся не злоупотреблять своей властью и не приказывать своему вассалу совершать действия, которые могут его обесчестить.
 
 Принимая вассала, дворянин обязан предоставить своим вассалам разумные средства для обеспечения для себя и своих семей, а также поклясться обеспечить военную защиту, если они подвергнутся несправедливому нападению. Вассалы дворянина клянутся служить своему сеньору. Для вассалов это служение выражается в военной службе и предоставлении совета своему сеньору.
@@ -159,16 +159,16 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Маноры также могут быть созданы при наличии шахты или каменоломни, и именно эти отрасли составляют основу их дохода. В таких манорах также может быть несколько акров земли для сельскохозяйственных работ, хотя из-за скалистого рельефа большая часть земли обычно используется под луга и пастбища.
 
-<aside>
+<Aside>
 
-##### Шир Яллис
+### Шир Яллис
 Шир Яллис в королевстве Адар будет нашим примером для дальнейших разделов. Он располагается на территории площадью 13 квадратных миль, большую часть которой занимает густой лес, хотя один из углов переходит в гористую местность. В нём находятся два манора.
 
 Площадь основного манора Яллис составляет 1472 акра, из которых около 78% приходится на пахотные земли — 1148 акров, ещё 12% — на луга и пастбища — 178 акров. Из оставшихся 146 акров около 30 акров используются для поддержания деревни, 70 акров лорд отводит под свои личные владения, а последние 46 акров отведены под строительство церкви.
 
 Второй манор в горном уголке Яллиса — 386 акров земли, из них 188 акров пашни, 164 акра пастбищ и 34 акра для деревни. Остальная часть манора представляет собой гористую местность с существующим железным рудником, который можно разрабатывать.
 
-</aside>
+</Aside>
 
 ### Сельские угодья
 Сельское хозяйство - основа любой средневековой экономики. Будучи самодостаточными сельскохозяйственными образованиями, маноры составляли основу этой экономики, а значит, и власти в феодальном обществе. В раннем средневековье маноры редко производили больше, чем потребляли. В более поздние времена средний манор мог производить больше еды и продавать её на городских рынках, чтобы поддержать зарождающуюся урбанизацию.
@@ -215,16 +215,16 @@ cover: ~assets/covers/lands-lords-ladies.png
 | Другие | 1% | — | — |
 
 
-<aside>
+<Aside>
 
-##### Яллис — Сельские угодья
+### Яллис — Сельские угодья
 В основном маноре Яллис лорд оставляет 240 акров для собственных нужд, 54 акра отдаёт йоменам, а остальные 854 акра используются как земли для 72 крестьянских семей, в общей сложности около 320 крепостных.
 
 Во втором маноре лорд оставит себе только 48 акров, чтобы выращивать корм для скота, который там содержится. Остальное будет распределено между 60 семьями крепостных в этом маноре, вероятно, также для корма скота. Из-за качества почвы жители здесь платят всего 3 серебряника за акр.
 
 В Яллисе слишком тепло, чтобы выращивать картофель, поэтому на полях обычно сажают около 74% зерна, 24% бобовых, а остальное — разные культуры, такие как лён или другие полезные культуры. В среднем за год лорд манора может собрать около 49 725 фунтов зерна, 4 600 фунтов бобов, 1 400 фунтов льна, а также небольшое количество различных других культур. Излишки зерна, около 15% урожая, лорд продаст за 77 золотых. Он также соберёт 3836 серебряных монет в виде дани с обоих маноров.
 
-</aside>
+</Aside>
 
 
 
@@ -273,19 +273,21 @@ cover: ~assets/covers/lands-lords-ladies.png
 | Курица | 22 ММ |
 
 
-#### Другие животные
+### Другие животные
 **Пчёлы.** Для некоторых лордов, которым повезло обзавестись ульями с пчёлами в лесах, окружающих их манор, пчеловодство может стать прибыльным занятием. Ульи собирают весной, переносят в владения лорда и ухаживают за ними в течение лета. Осенью собирают мёд. Более богатые лорды могут нанять специализированных пчеловодов, способных собрать мёд, не разрушив улей, в то время как более бедные и неопытные лорды часто разрушают улей в процессе сбора и вынуждены надеяться на новый улей следующей весной.
+
 **Собаки.** Как и сегодня, собаки не были редкостью на средневековых фермах и считались домашними животными и компаньонами, но их также часто использовали в качестве пастухов и сторожевых псов. Дворяне держали целые своры собак, обученных помогать в охоте и пасти скот.
+
 **Кошки.** Кошки не были редкостью, хотя редко можно было встретить семью, которая считала бы кошку своим домашним питомцем. Вместо этого они свободно бродили по деревне и фермерским угодьям, охотясь на мышей и других вредителей, не подпуская их к жителям и хранящемуся у них зерну.
 
-<aside>
+<Aside>
 
-##### Яллис — Скот
+### Яллис — Скот
 В основном маноре лорд Яллиса держит своего боевого коня, двух тягловых и четырёх ездовых лошадей, 11 голов крупного рогатого скота и 28 овец. В своём владении лорд также держит 10 свиноматок и 85 кур круглый год. Скот потребляет около 39 720 фунтов корма в год и использует 93 акра пастбищ. После удовлетворения собственных потребностей лорд может заработать около 312 золотых.
 
 Второй манор занимает ещё 164 акра пастбищ. В этом скалистом маноре лорд держит ещё 36 овец, которые потребляют весь корм, выращенный лордом в этом маноре, и приносят ему дополнительно 144 золотых.
 
-</aside>
+</Aside>
 
 ### Шахты
 Шахты могут быть очень прибыльным предприятием, если они присутствуют в маноре; однако они встречаются редко. Наличие шахты также может создать дополнительные трудности для лорда, поскольку он столкнётся с давлением со стороны других людей, стремящихся получить контроль над своими богатствами, и конкуренцией со стороны соседних лордов за обладание жилами.
@@ -370,13 +372,16 @@ cover: ~assets/covers/lands-lords-ladies.png
 | Известняк | 1000 тонн | 6 ЗМ/тонна |
 | Песчаник | 1000 тонн | 5 ЗМ/тонна |
 
-<aside>
+<Aside>
 
-##### Яллис — Шахты
+### Яллис — Шахты
 
 Второй манор в Яллисе известен тем, что в нём находится железная шахта. Примерно 290 жителей манора делят время между фермерскими угодьями и скотом и работой на руднике. Шахта даёт около 60 000 фунтов железа в год, и по правилу третей 20 000 фунтов идут непосредственно королю Адара, 20 000 фунтов - лорду Яллиса, а последние 20 000 фунтов железа делятся между шахтёрами. Бригадир, имеющий право управлять шахтой, оставляет 2 500 фунтов себе, а остальные 17 500 фунтов делятся между семьями крепостных, примерно по 290 серебряников на семью.
 
-</aside>
+</Aside>
+
+
+
 
 ### Деревни и производство
 Помимо земель, лорд или леди манора также обладает исключительными правами на ведение торговли и производства в пределах манора. Это позволяет дворянину раздавать право на ведение определённых видов деятельности на своих землях в обмен на большую арендную плату. В таблице 9 ниже перечислены некоторые распространённые отрасли, население деревни, необходимое для их поддержания, и ежегодная рента, причитающаяся дворянину. Этот список не является полным, более крупные деревни и города будут привлекать более редкие и экзотические отрасли и ремесленников для предоставления своих услуг.
@@ -399,62 +404,57 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Распространённые отрасли промышленности, перечисленные в таблице, подробно описаны в следующих разделах. Как уже говорилось, этот список не является исчерпывающим, однако в нём представлены те виды промышленности, которые можно найти в большинстве деревень королевства. При определении размера арендной платы для отраслей, не включённых в данный список, арендная плата обычно составляет 20-40% от предполагаемого годового дохода от такой отрасли в маноре.
 
-#### Мельницы
+### Мельницы
 По понятным причинам мельницы были жизненно важны для крупной сельскохозяйственной экономики. Довольно распространёнными были водяные мельницы, которые приводились в движение проточной водой, хотя в регионах, где не было мощных водных путей и дули достаточно сильные ветры, использовались ветряные мельницы. Мельники перемалывают сырое зерно в муку, которая используется для выпечки хлеба и других изделий.
 
 Мельники обычно выполняли и другие функции в маноре. Обычно мельницы соединялись с мостами через водные пути, которые приводили их в движение, и мельники имели право взимать плату с каждого, кто пользовался их мостом для переправы. Мельник также обычно собирал стебли и тростник, растущие в пруду у мельницы, и продавал их для использования в качестве соломы или корма для свиней. Мельник также мог продавать жителям деревни разрешения на ловлю рыбы в пруду.
 
-
-
-
-
-
-#### Пекарни
+### Пекарни
 Связанные с мельником, пекари являются следующей ступенью в сельскохозяйственной экономической системе. Пекари покупают муку на мельницах и пекут из неё хлеб, который продают жителям деревни.
 
 Пекари были гораздо более распространены, чем мельники, потому что пекарня была менее накладной, чем мельница. Обычно пекарями и пивоварами в небольших населённых пунктах управляли муж и жена, чтобы объединить расходы в этих менее прибыльных сферах.
 
-#### Пивоварни
+### Пивоварни
 Пивоваров, как и пекарей и мельников, привлекают крупные сельскохозяйственные регионы. Они покупают сырое зерно, обычно ячмень, и используют его для приготовления пива. Любой, кто называет себя пивоваром, умеет варить эль, и в небольших деревнях это, скорее всего, всё, что они могут сделать. Более крупные деревни, где есть сады и виноградники, привлекают более опытных пивоваров, которые умеют делать сидр, вина и настойки.
 
 Как правило, на каждые 5 фунтов зерна приходится 1 галлон пива. Сидры также производятся по 1 галлону на каждые 5 фунтов фруктов. На 1 галлон вина приходится 35 фунтов винограда, а на галлон настойки — около 50 фунтов зерна или фруктов.
 
 Как уже говорилось в прошлом разделе, нередко пекарем и пивоваром становились муж и жена. Однако по мере роста деревень возрастает вероятность того, что более опытный пивовар откроет собственную таверну для продажи своей продукции. В ещё более крупных деревнях самые популярные из таких таверн начинают превращаться в трактиры.
 
-#### Скотобойня
+### Скотобойня
 Чем важнее для манора домашний скот, тем больше мясников будет привлекаться в деревню. Мясники покупают стареющих или убыточных животных у их владельцев, забивают и разделывают их, а затем продают мясо в деревню.
 
-#### Кузни
+### Кузни
 Во всех деревнях, кроме самых маленьких, как правило, есть хотя бы один кузнец, и часто лорд отказывается от арендной платы, если это необходимо для привлечения кузнеца. Это объясняется тем, что кузнецы необходимы деревне. Они делают все основные инструменты — от плуга до косы и серпа. Они также делают и ремонтируют оружие и доспехи лордов, изготавливают и заменяют детали для мельницы.
 
 Кузнецов привлекают шахтёрские города, и в таких местах они часто начинают выбирать специализацию: обычно встречаются низкоквалифицированные плавильщики, отделяющие металлы от основной руды, и несколько кузнецов, специализирующихся на использовании того или иного добываемого металла.
 
-#### Сыроварни
+### Сыроварни
 Это ещё одна распространённая отрасль, поскольку молоко быстро портилось без магического средства его сохранения. Сыр же было гораздо проще хранить в течение длительных периодов времени и перевозить на рынки. Любая община с большим поголовьем коров, коз или овец обычно нуждается хотя бы в одном сыроваре, чтобы превращать собранное молоко в сыры, масла и другие молочные продукты.
 
 Опытные сыровары могли производить в среднем 4 фунта сыра из 5 галлонов молока, которое они покупали.
 
-#### Плотницкая
+### Плотницкая
 Как и в случае с кузнецами, во всех деревнях, кроме самых маленьких, есть плотник. Плотники необходимы для строительства самых важных зданий в деревне: мельницы, амбара, силосов и даже поместья лорда.
 
 После образования деревни плотник часто занят ремонтом имеющихся построек, но для привлечения дополнительных плотников нужна довольно большая деревня.
 
-#### Дубильня
+### Дубильня
 Дубильщики, как и мясники, зарабатывают на жизнь, покупая шкуры и кожу животных после забоя. Дубильщики обычно располагаются в отдалённых частях деревни из-за запахов, выделяемых в процессе производства, и нежелание жителей деревни увеличивать количество запахов обычно поддерживает число дубильщиков на довольно низком уровне.
 
-#### Стригальня
+### Стригальня
 Стригали зависят от наличия овец. Стригали берут сырую шерсть, состриженную с овец весной, и превращают её в пригодную для работы нить и ткань. Затем они продают её жителям деревень, а в больших деревнях — портным и швеям для производства одежды.
 
-<aside>
+<Aside>
 
-##### Яллис — Производства
+### Яллис — Производства
 В основном маноре Яллис проживает около 350 человек. Это означает, что там можно ожидать 1,75 мельницы, 3,5 пекарен, 2,8 пивоварен, 1,4 скотобойнь, 1,17 кузниц, 1 сыроварен, 0,875 домов плотника, 0,7 дубилен и 1 стригальня. Учитывая структуру манора, мы получим 2 мельницы, 4 пекарни, 3 пивоваренных, 1 скотобойню, 1 сыроварню, 1 кузницу, 1 плотницкую и 1 стринальню.
 
 Второй манор Яллис немного меньше, его население составляет около 290 человек, что позволяет ожидать 1,45 мельницы, 2,9 пекарни, 2,32 пивоварни, 1,16 скотобойни, 0,97 кузни, 0,83 сыроварни, 0,73 домов плотника, 0,58 дубильни и 0,83 стригальни. Поскольку доминируют скотоводы и шахтёры, и нет реального источника энергии для мельницы, мы скажем, что есть 2 мясника, 3 кузнеца (2 из них плавильщики), 1 сыровар, 1 дубильщик и 1 стригаль.
 
 Лорд Яллиса получит в общей сложности 1 650 золотых в виде арендной платы с различных производств в обоих манорах.
 
-</aside>
+</Aside>
 
 
 
@@ -464,25 +464,25 @@ cover: ~assets/covers/lands-lords-ladies.png
 ### Поместье лорда
 Поместье дворянина — это личное убежище для него самого и его гостей. Дворяне могут использовать землю для собственного удовольствия, возводя роскошные сады и ландшафты, или же использовать её для производства различных товаров, таких как мёд, вино или настойки. В этом разделе мы рассмотрим различные источники дохода, которые приносит поместье лорда.
 
-#### Фруктовые сады и виноградники
+### Фруктовые сады и виноградники
 Нередко дворяне в соответствующих широтах имеют в своём поместье небольшой сад или виноградник. Яблоневые сады широко распространены в северном климате, хотя люди редко едят эти плоды, поскольку их вкусных сортов очень мало. Вместо этого из яблок в основном делают сидр, настойки, а некоторые из них идут на корм скоту. В других регионах в садах выращивают вишни, персики, сливы и груши, которые идут в пищу, а также на производство вин и настоек.
 
 В более тёплом климате на виноградниках чаще всего выращивают сорт винограда для вина. В среднем виноградник может производить около 100 галлонов вина с одного акра, хотя это, как правило, более распространённые и водянистые сорта вин. При наличии хорошего винодела с одного акра виноградника можно получить 80 галлонов хорошего вина или 45 галлонов изысканного вина.
 
 Знатные люди обычно оставляют большую часть произведённого для себя и гостей, но в среднем виноградник или фруктовый сад может давать около 25 золотых с акра.
 
-#### Правосудие
+### Правосудие
 Как уже говорилось в разделе "Дворянские права", лорд или леди манора обладают исключительными правами на вершение правосудия в своём поместье. Они разрешают все уголовные и гражданские споры, доведённые до них жителями подвластных им маноров, в рамках законов своего сеньора. Также лорд или леди имеют право и обязаны разрешать споры между своими вассалами. Рассмотрение дела в суде требует судебных издержек, а преступников, признанных виновными, часто заставляют платить дополнительные штрафы, которые идут в казну дворянства.
 
 В среднем за год общая сумма сборов и штрафов, которые лорд взимает при вершении правосудия, составляет около 5 серебряных монет на каждую крепостную семью в деревне.
 
-#### Прочие доходы
+### Прочие доходы
 Существует множество других мелких доходов, которые лорд или леди могут собирать. Это могут быть особые способности, которыми обладает игрок или НИП, или штрафы и налоги, взимаемые в маноре. Мастер может рассматривать каждый из этих источников по отдельности или приблизительно считать эти различные доходы как 1% от доходов от сельского хозяйства и животноводства.
 
 
 <Aside v= "ivory" >
 
-##### Яллис — Поместье лорда
+### Яллис — Поместье лорда
 Личное поместье лорда занимает 70 акров на территории основного манора. На этих землях лорд построил свой дом с декоративным и огородным садом. Также в поместье есть небольшой фруктовый сад площадью 10 акров.
 
 В среднем за год лорд получает 250 золотых от продажи сидра и крепких напитков, 66 золотых в виде штрафов и пеней от вершения правосудия над 132 семьями, проживающими в двух манорах, и ещё 11 золотых в виде различных доходов в течение года.
@@ -494,7 +494,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 В этом разделе мы рассмотрим все эти расходы и приведём расчёты для определения их среднегодовой стоимости.
 
-#### Обслуживание
+### Обслуживание
 В течение года дворянин должен содержать собственное поместье, большой общий амбар, другие постройки, расположенные на территории поместья, а также мельницу, печи и другие сооружения, необходимые для производства.
 
 В среднем поместье приходится полностью перестраивать каждые 25 лет, что в среднем составляет 4 % от стоимости постройки поместья в год. Чтобы обеспечить некоторую случайность от года к году, это можно приблизительно представить как 1%\*(2к4-1). Вы можете определить стоимость строений, используя правила из Dungeon Master’s Guide или другого источника правил по вашему выбору. В качестве альтернативы вы можете использовать следующую оценку, основанную на чине дворянина.
@@ -510,7 +510,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 | Король | 250000 |
 | Император | 275000 |
 
-#### Социальные нужды
+### Социальные нужды
 Чтобы поддерживать статус среди других дворян, необходимо тратить определённое количество денег на социальные нужды. Сюда входят расходы на развлечение гостей в поместье, проведение турниров, пожертвования церкви или меценатство, а также различные расходы на экипировку, украшение и прочее.
 
 Как правило, чем больше лорд или леди тратят на это, тем выше их положение. Траты на подобные вещи считаются признаком богатства и роскоши.
@@ -524,12 +524,12 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Более бедные дворяне могут обойтись всего лишь 5% от своего дохода, однако по мере роста их чина от них будут требовать больше посещать светские мероприятия и дарить больше подарков, а расходы влиятельного герцога или члена королевской семьи могут доходить до 15-20% от дохода.
 
-#### Служба и щитовые деньги
+### Служба и щитовые деньги
 Феодальная обязанность вассала - служить своему сеньору. Часто это принимает форму военной службы, например охоты на преступников, сопровождение своего сеньора, служба в качестве часового на одном из аванпостов своего сеньора или служба в армии своего сеньора во время войны. Дворяне более высокого чина, такие как герцоги, графы и даже могущественные бароны, обычно выплачивают сбор, известный как щитовыми деньгами, обычно около 8-12% от дохода манора, чтобы быть освобождёнными от этой службы в мирное время. Во время войны от этих дворян ожидают, что они поведут своих рыцарей и армии против врага.
 
 Кроме того, от вассалов ожидают совета для своего сеньора. Это включает в себя предоставление различных мнений, советов в своих областях знаний, помощь в разрешении споров между другими вассалами и любые другие услуги подобного рода. Сеньоры гораздо мягче относятся к этой службе, обычно требуя служить только тем вассалам, которые обладают ценными знаниями или опытом.
 
-#### Служащие
+### Служащие
 Оплата труда различных членов и прислуги дворянского двора — одна из самых дорогих частей содержания поместья. Проницательные дворяне могут сократить эти расходы за счёт выдачи феодов, земель или других форм оплаты, но это всё равно остаётся значительной статьёй расходов.
 
 Для придворных лорда нередки случаи, когда лорд назначает их йоменами и даёт им в 12-20 акров земли, которыми они будут владеть безвозмездно. Советников более высокого ранга, таких как заклинатели и божественные советники, превращают в вассалов, предоставляя им собственные феоды и обеспечивая их лояльность, если лорд достаточно высокого ранга и обладает достаточными владениями.
@@ -569,7 +569,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 **Страж/солдат.** Эти люди прошли небольшое обучение и были экипированы лордом в простые доспехи с оружием, чтобы обеспечить безопасность поместья, деревни и всего манора в целом. Эти люди не являются закаленной боевой силой, хотя они немного лучше обычных призывников, и они подготовлены использовать оборонительные сооружения манора для защиты от налетчиков и бандитов.
 **Слуга.** Самая распространенная должность в штате лорда. Слуги нужны для всего: от батраков до горничных, от прислуги до пастухов и для любых других работ, которые требуются лорду или леди. Обычно в поместье лорда или леди постоянно работает дюжина слуг, а в каждом маноре — 1-2 слуги для помощи придворным. Все остальные потребности в выполняют крепостные крестьяне манора.
 
-#### Милостыня
+### Милостыня
 Согласно обычаям, определенная часть богатства лорда или леди отдается на благотворительность беднякам. Обычно это выражается в раздаче черствого хлеба с прошлого дня, выброшенной одежды, старых животных и других вещей, ценность которых для дворянина упала, но без которых не могут прожить беднейшие члены манора.
 
 Средний дворянин отдает около 2 % своего дохода в качестве милостыни бедным в своих манорах.
@@ -577,7 +577,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 <Aside >
 
-##### Яллис — Траты
+### Яллис — Траты
 Будучи членом джентри, лорд Яллиса платит лишь 280 золотых за различные светские мероприятия и 750 золотых своему сеньору в качестве щитовых денег. Его большое поместье обходится ему примерно в 800 золотых в год, а также около 110 золотых от отдаёт в качестве милостыни.
 
 В качестве платы своему религиозному советнику лорд предоставляет ему 46 акров земли, на которых можно построить церковь. Его распорядитель получает 20 акров в качестве платы за свои услуги, и по 17 акров достается двум патрульным в двух манорах. Лорд дополнительно платит чародею, консультирующему его по вопросам магии, бейлифу, смотрителю ферм и камердинеру, что в общей сложности обходится ему в 1 400 золотых за их услуги.
